/*
Copyright 2019 The Alcor Authors.

Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
*/

syntax = "proto3";

package alcor.schema;

option java_package = "com.futurewei.alcor.schema";
option java_outer_classname = "Router";

import "common.proto";

message RouterConfiguration {
    uint32 format_version = 1;
    uint32 revision_number = 2;

    string request_id = 3;
    string id = 4;
    MessageType message_type = 5; // DELTA (default) or FULL
    string host_dvr_mac_address = 6;

    message RoutingRule {
        OperationType operation_type = 1;
        string id = 2;
        string name = 3;
        string destination = 4;  // destination IP, could be 154.12.42.24/32 (host address) or 0.0.0.0/0 (network address)
        string next_hop_id = 5;  // the ID of next_hop for looking up NextHopInfo
        uint32 priority = 6;
    }

    message SubnetRoutingTable {
        string subnet_id = 1;
        repeated RoutingRule routing_rules = 2;
    }

    repeated SubnetRoutingTable subnet_routing_tables = 7;
}

message RouterState {
    OperationType operation_type = 1;
    RouterConfiguration configuration = 2;
}

/* the next_hop info may look like:
enum DestinationType {
    INTERNET = 0;
    VPC_GW = 1;
}

message NextHopInfo{
    uint32 format_version = 1;
    uint32 revision_number = 2;

    string request_id = 3;
    string id = 4;
    MessageType message_type = 5; // DELTA (default) or FULL
    DestinationType destination_type = 6;
    string next_hop_ip = 7;
    string next_hop_mac = 8;
    }

message NextHopState {
    OperationType operation_type = 1; // Should be INFO only
    NextHopInfo configuration = 2;
}
*/